# dalotia

./: CMakeLists.txt  README.md  dalotia.cpp  dalotia.hpp  dalotia_assignment.cpp  dalotia_assignment.hpp  dalotia_formats.cpp  dalotia_formats.h  dalotia_formats.hpp  dalotia_permutation.hpp  example.cpp  interface.cpp  safetensors_file.cpp  safetensors_file.hpp  tensor_file.hpp
.github/workflows/: ctest.yml  spack.yml
CMakeModules/: Findsafetensors-cpp.cmake  Findsafetensors_cpp.cmake
cmake/: dalotia-config.cmake.in
cmake/modules/: Findtensorflow.cmake
data/: generate_safetensors.py  generate_tf.py  model-mnist.safetensors  model.safetensors
data/tensorflow_model/: keras_metadata.pb  saved_model.pb
data/tensorflow_model/variables/: variables.data-00000-of-00001  variables.index
spack_repo_dalotia/: repo.yaml
src/: CMakeLists.txt  dalotia.cpp  dalotia.f03  dalotia.f90  dalotia.h  dalotia.hpp  dalotia_assignment.cpp  dalotia_assignment.hpp  dalotia_formats.cpp  dalotia_formats.h  dalotia_formats.hpp  dalotia_safetensors_file.cpp  dalotia_safetensors_file.hpp  dalotia_tensor_file.hpp  dalotia_tensorflow_file.cpp  dalotia_tensorflow_file.hpp  safetensors_file.cpp  safetensors_file.hpp  tensor_file.hpp
test/: CMakeLists.txt  tensorflow.supp  test_helper.h  test_load.c  test_mnist.F03  test_mnist.cpp  test_mnist.f03  test_safetensors.cpp  test_tensorflow.cpp
