include (CTest)
if(DALOTIA_WITH_SAFETENSORS_CPP)
    add_executable( test_safetensors test_safetensors.cpp )
    target_link_libraries( test_safetensors dalotia_cpp )
    target_include_directories( test_safetensors PUBLIC ${SAFETENSORS_CPP_INCLUDE_DIR} ${safetensors-cpp_DIR})
    add_test( safetensors-file test_safetensors )

    add_executable( test_load_c test_load.c )
    target_link_libraries( test_load_c dalotia_cpp )
    target_include_directories( test_load_c PUBLIC ${SAFETENSORS_CPP_INCLUDE_DIR} ${safetensors-cpp_DIR})
    add_test( load-file-c test_load_c )

    add_executable( test_mnist test_mnist.cpp )
    target_link_libraries( test_mnist dalotia_cpp )
    target_include_directories( test_mnist PUBLIC ${SAFETENSORS_CPP_INCLUDE_DIR} ${safetensors-cpp_DIR})
    add_test( mnist_load test_mnist )

    if (DALOTIA_WITH_FORTRAN)
        add_executable( test_mnist_fortran test_mnist.F03 )
        set_target_properties(test_mnist_fortran PROPERTIES LINKER_LANGUAGE Fortran)
        target_include_directories( test_mnist_fortran PUBLIC ${SAFETENSORS_CPP_INCLUDE_DIR} ${safetensors-cpp_DIR})
        target_link_libraries( test_mnist_fortran dalotia_cpp )
        add_test( mnist_load_fortran test_mnist_fortran )
    endif (DALOTIA_WITH_FORTRAN)
endif (DALOTIA_WITH_SAFETENSORS_CPP)
